--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "excercises",
-  "version": "0.1.0",
-  "homepage": "https://tipikej.github.io/excercises",
+  "name": "PortfolioCwiczenia",
+  "version": "1.0.0",
+  "homepage": "https://tipikej.github.io/PortfolioCwiczenia/",
   "description": "Portfolio Tomasza Kumor",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "start": "npm run serve"
   },
   "dependencies": {
-    "gh-pages": "^1.2.0",
+    "gh-pages": "^2.0.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
@@ -28,7 +28,8 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "ws": "3.3.2"
   },
   "eslintConfig": {
     "root": true,
